FIx dark mode toggle & members list

--- a/ui/angular/src/app/components/ide/ide.component.scss
+++ b/ui/angular/src/app/components/ide/ide.component.scss
@@ -14,7 +14,8 @@ nz-header {
 }
 
 .members-list {
-  list-style-type: none;
+  list-style: none;
+  padding-left: 0;
 }
 
 .logout-icon {
